--- a/charts/httpbin/templates/ingress.yaml
+++ b/charts/httpbin/templates/ingress.yaml
@@ -34,10 +34,20 @@ spec:
       http:
         paths:
         {{- range .paths }}
+        {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
+          - pathType: prefix
+            path: {{ . }}
+            backend:
+              service
+                name: {{ $fullName }}
+                port:
+                  number: {{ $svcPort }}
+        {{- else -}}
           - path: {{ . }}
             backend:
               serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
-        {{- end }}
-  {{- end }}
-{{- end }}
+        {{- end -}}
+        {{- end -}}
+  {{- end -}}
+{{- end -}}
