Fix the pathType option for Ingress resource

--- a/charts/httpbin/templates/ingress.yaml
+++ b/charts/httpbin/templates/ingress.yaml
@@ -37,7 +37,7 @@ spec:
         {{- range .paths }}
           - path: {{ . }}
             {{ if semverCompare ">=1.19-0" $kubeVersion -}}
-            pathType: prefix
+            pathType: Prefix
             backend:
               service:
                 name: {{ $fullName }}
